refactor: optimize docker model handling with runtime download and bind mount

--- a/A2A/.env.example
+++ b/A2A/.env.example
@@ -1,5 +1,5 @@
 # Hugging Face Mirror Endpoint
-HF_ENDPOINT=https://hf-mirror.com
+HF_ENDPOINT=https://huggingface.co
 
 # Hugging Face Token (optional)
 # HF_TOKEN=your_token_here
