Refactor A2A to Web Service Architecture: Split into Agent Core, LLM Service, and Frontend
- Refactored main.py to FastAPI\n- Created LLM Service (gemma-2-2b-it)\n- Added React Frontend\n- Orchestrated via Docker Compose\n- Implemented task status polling\n- Fixed HTTP timeout issues

--- a/A2A/Dockerfile
+++ b/A2A/Dockerfile
@@ -20,4 +20,5 @@ RUN chmod +x /app/entrypoint.sh
 ENTRYPOINT ["/app/entrypoint.sh"]
 
 # Run the application
+EXPOSE 8080
 CMD ["python", "main.py"]
