--- a/A2A/Dockerfile.llm
+++ b/A2A/Dockerfile.llm
@@ -2,6 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+ENV PYTHONUNBUFFERED=1
+
 # Install system dependencies if needed (e.g. for torch)
 # RUN apt-get update && apt-get install -y ...
 
