--- a/A2A/docker-compose.yml
+++ b/A2A/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # Agent Core Service
+  # Agent Core Service (Mac Development)
   app:
     build: .
     container_name: a2a_agent_core
@@ -10,32 +10,15 @@ services:
       - ./output:/app/output
       - ./data:/app/data
     environment:
-      - LLM_SERVICE_URL=http://llm_service:8000
+      # Connect to Mac host native LLM server
+      - LLM_SERVICE_URL=http://host.docker.internal:8000
     env_file:
       - .env
-    depends_on:
-      - llm_service
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: on-failure
 
-  # LLM Service
-  llm_service:
-    build:
-      context: .
-      dockerfile: Dockerfile.llm
-    container_name: a2a_llm_service
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./models:/app/models
-    environment:
-      - MODEL_PATH=/app/models/gemma-2-2b-it
-    restart: unless-stopped
-    # Note: Remove 'deploy' block if running on CPU-only mac (Docker Desktop handles it differently usually) or keep specific for environment.
-    # For Mac (OrbStack/Docker Desktop), usually no special config needed for CPU inference, but for GPU it's different.
-    # I'll comment out the deploy block for safety unless I know it's a GPU machine. 
-    # The user said "mac", so likely Apple Silicon. No nvidia.
-
-    # Frontend Service
+  # Frontend Service
   frontend:
     build:
       context: ./frontend
