Fix: Stable Training Pipeline with Dynamic Strategy Selection & Data Hallucination Fix

--- a/A2A/docker-compose.yml
+++ b/A2A/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       # Connect to Mac host native LLM server
       - LLM_SERVICE_URL=http://host.docker.internal:8000
+      - TZ=Asia/Seoul
     env_file:
       - .env
     extra_hosts:
