Refactor: Modularize configurations and update .env.example
Moved environment variable loading into class constructors and synchronized .env.example with all current configuration options.

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -6,8 +6,22 @@ NEO4J_PASSWORD=password
 # LLM Configuration
 LLM_API_BASE=http://localhost:8000/v1
 LLM_API_KEY=EMPTY
-LLM_MODEL=meta-llama/Meta-Llama-3-8B-Instruct
+LLM_MODEL=models/gemma-2-2b-it
+LLM_TIMEOUT=60.0
 
-# Chunking Configuration
+# Graph Construction Chunking
 CHUNK_SIZE=256
 CHUNK_OVERLAP=20
+
+# Ontology Discovery Chunking
+ONTOLOGY_CHUNK_SIZE=4000
+ONTOLOGY_CHUNK_OVERLAP=500
+
+# Ontology Configuration
+ONTOLOGY_PATH=ontology.json
+
+# Discovery Configuration
+ONTOLOGY_DISCOVERY_PROMPT="You are an expert in 3GPP standards and Knowledge Graph engineering. \nAnalyze the following technical specification and extract the core ONTOLOGY (schema).\n\nInstructions:\n1. Identify the key ENTITY TYPES (Nodes) mentioned (e.g., NetworkNode, ProtocolMessage, Timer, Procedure, UserState).\n2. Identify the VALID RELATIONSHIPS between these types (e.g., SENDS, TRIGGERED_BY, EXPIRES_DURING, TRANSITIONS_TO).\n3. Focus on creating a schema that supports ROOT CAUSE ANALYSIS and SYSTEM OPTIMIZATION.\n\nReturn STRICTLY a JSON object with the following structure:\n{{\n  \"node_types\": [{{\"label\": \"LabelName\", \"description\": \"Brief definition\"}}],\n  \"relationship_types\": [{{\"source\": \"SourceLabel\", \"type\": \"REL_TYPE\", \"target\": \"TargetLabel\"}}]\n}}\n\nSource Text:\n{text}\n\nJSON Output:"
+
+# Extraction Prompt
+TRIPLE_EXTRACTION_PROMPT="You are a 3GPP Knowledge Graph expert. Extract knowledge triples from the text strictly following the provided ONTOLOGY.\n\nONTOLOGY:\n{ontology}\n\nInstructions:\n1. Only use Node Labels and Relationship Types defined in the ONTOLOGY.\n2. If a relationship is not explicitly in the ontology but is critical, use the most similar type.\n3. Return strictly a JSON object with a key 'triples'.\n4. Each triple must have: 'head' (node name), 'head_label', 'type' (relationship), 'tail' (node name), 'tail_label'.\n\nText:\n{text}\n\nJSON Output:"
