feat: implement hybrid 3GPP ontology discovery with specific entity mapping and descriptive properties
- Restored and improved OntologyDiscovery class with robust 'discover' and 'consolidate' methods
- Implemented specific entity labeling (e.g., UE, gNB) mapped to base categories (NetworkNode, etc.)
- Updated prompts to request technical descriptions for properties instead of data types
- Standardized ontology structure using 'nodes' and 'relations' keys across the pipeline
- Added CLI arguments for custom node and relationship type limitations
- Integrated dirtyjson for resilient parsing of local LLM outputs

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -4,27 +4,114 @@ NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
 
 # LLM Configuration
-LLM_API_BASE=http://localhost:8000/v1
+LLM_API_BASE=http://192.168.1.2:8000/v1
 LLM_API_KEY=EMPTY
 LLM_MODEL=models/gemma-2-2b-it
-LLM_TIMEOUT=60.0
+LLM_TIMEOUT=300.0
 
 # Graph Construction Chunking
-CHUNK_SIZE=1000
-CHUNK_OVERLAP=200
+CHUNK_SIZE=500
+CHUNK_OVERLAP=100
 
 # Ontology Discovery Chunking
-ONTOLOGY_CHUNK_SIZE=1000
-ONTOLOGY_CHUNK_OVERLAP=200
+ONTOLOGY_CHUNK_SIZE=500
+ONTOLOGY_CHUNK_OVERLAP=100
 
 # Ontology Configuration
 ONTOLOGY_PATH=ontology.json
 
-# Discovery Configuration
-ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect. \nAnalyze the technical text and extract a formal schema.\n\nInstructions:\n1. Identify Generic Node Types. For each type, define its 'properties' (what attributes are mentioned for this category?).\n2. Identify Relationship Types. For each, define its 'properties' (what metadata describes this link, like 'condition' or 'interface'?).\n3. Use specific categories: NetworkNode, ProtocolMessage, Timer, Procedure, UserState.\n\nReturn STRICTLY a JSON object:\n{{\n  \"node_types\": [\n    {{\n      \"label\": \"Label\", \n      \"description\": \"Definition\", \n      \"properties\": {{\"prop_name\": \"type/desc\"}}\n    }}\n  ],\n  \"relationship_types\": [\n    {{\n      \"source\": \"Label\", \n      \"type\": \"REL_TYPE\", \n      \"target\": \"Label\", \n      \"properties\": {{\"prop_name\": \"type/desc\"}}\n    }}\n  ]\n}}\n\nText:\n{text}\n\nJSON Output:"
+# Discovery Prompt
+ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
+Analyze the text to discover domain entities and their interaction patterns.
+
+FIXED CATEGORIES (Base Types):
+- NetworkNode, ProtocolMessage, Timer, Procedure, UserState
+
+Instructions:
+1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to a 'base_type'.
+2. Define 'properties' for each label. DO NOT use simple types like 'string'. 
+3. INSTEAD, provide a clear, technical description of what the property represents and examples of its values from the text (e.g., \"The specific 3GPP signaling message name found in the header\").
+4. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
+
+Return STRICTLY a JSON object with keys 'nodes' and 'relations':
+{{
+  \"nodes\": [
+    {{
+      \"label\": \"UE\", 
+      \"base_type\": \"NetworkNode\",
+      \"description\": \"User Equipment\", 
+      \"properties\": {{
+        \"id\": \"Unique identifier for the UE in the local cell scope\", 
+        \"state\": \"The RRC connection state (e.g., IDLE, CONNECTED, INACTIVE)\"
+      }}
+    }}
+  ],
+  \"relations\": [
+    {{
+      \"source\": \"UE\", 
+      \"target\": \"gNB\", 
+      \"type\": \"SENDS\", 
+      \"properties\": {{
+        \"message_name\": \"The specific 3GPP signaling message name (e.g., RRCSetupRequest)\", 
+        \"interface\": \"The 3GPP interface used for transmission (e.g., Uu, N2, Xn)\"
+      }}
+    }}
+  ]
+}}
+
+Text:
+{text}
+
+JSON Output:"
 
 # Extraction Prompt
-TRIPLE_EXTRACTION_PROMPT="You are a 3GPP Knowledge Graph expert. \nExtract knowledge triples strictly following the provided ONTOLOGY.\n\nONTOLOGY:\n{ontology}\n\nInstructions:\n1. Map specific entities to Generic Node Labels.\n2. Populate 'node_properties' and 'edge_properties' based on the schema.\n3. Return strictly a JSON object with a key 'triples'.\n\nExample Triple:\n{{\n  \"head\": \"UE\",\n  \"head_label\": \"NetworkNode\",\n  \"head_properties\": {{\"id\": \"UE1\", \"state\": \"IDLE\"}},\n  \"type\": \"SENDS\",\n  \"edge_properties\": {{\"interface\": \"Uu\", \"condition\": \"Initial access\"}},\n  \"tail\": \"gNB\",\n  \"tail_label\": \"NetworkNode\"\n}}\n\nText:\n{text}\n\nJSON Output:"
+TRIPLE_EXTRACTION_PROMPT="You are a 3GPP Knowledge Graph expert. 
+Extract knowledge triples strictly following the provided LIMITATIONS and ONTOLOGY.
+
+NODE TYPES (Limitation):
+{node_types}
+
+RELATIONSHIP TYPES (Limitation):
+{relation_types}
+
+DISCOVERED PROPERTIES (Ontology):
+{ontology}
+
+Instructions:
+1. Map specific entities (e.g., 'UE', 'AMF') to the most appropriate Generic Node Label (e.g., 'NetworkNode').
+2. CRITICAL: Use the 'subtype' or 'name' property to preserve the specific entity identity.
+3. Extract properties for Relationships as defined in the Ontology (e.g., populate 'message_name' for SENDS).
+4. Return strictly a JSON object with a key 'triples'.
+
+Example Triple:
+{{
+  \"head\": \"UE\",
+  \"head_label\": \"UE\",
+  \"head_type\": \"NetworkNode\",
+  \"type\": \"SENDS\",
+  \"edge_properties\": {{\"message_name\": \"RRCSetupRequest\", \"interface\": \"Uu\"}},
+  \"tail\": \"gNB\",
+  \"tail_label\": \"gNB\",
+  \"tail_type\": \"NetworkNode\"
+}}
+
+Text:
+{text}
+
+JSON Output:"
 
 # Consolidation Prompt
-ONTOLOGY_CONSOLIDATION_PROMPT="Consolidate the following raw extractions into a single, unified 3GPP ontology. \nMerge similar properties and ensure every node/relationship has a clear definition.\n\nNodes:\n{nodes}\n\nRelationships:\n{relationships}\n\nReturn the unified JSON schema."
+ONTOLOGY_CONSOLIDATION_PROMPT="You are a 3GPP Ontology Architect.
+Consolidate the discovered domain entities and relationship patterns into a SINGLE UNIFIED SCHEMA with 'nodes' and 'relations' keys.
+
+STRICT RULES:
+1. ONLY use the 3GPP domain (UE, gNB, AMF, UPF, etc.). 
+2. Every node MUST have a 'base_type' from: NetworkNode, ProtocolMessage, Timer, Procedure, UserState.
+3. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
+4. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
+
+Return STRICTLY a JSON object with keys 'nodes' and 'relations'.
+
+Input Schemas to Consolidate:
+{nodes}
+"
