chore: rename base_type to node_type in prompts and code for clarity

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -24,11 +24,11 @@ ONTOLOGY_PATH=ontology.json
 ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
 Analyze the text to discover domain entities and their interaction patterns.
 
-FIXED CATEGORIES (Base Types):
+FIXED CATEGORIES (Node Types):
 - NetworkNode, ProtocolMessage, Timer, Procedure, UserState
 
 Instructions:
-1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to a 'base_type'.
+1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to a 'node_type'.
 2. Define 'properties' for each label. DO NOT use simple types like 'string'. 
 3. INSTEAD, provide a clear, technical description of what the property represents and examples of its values from the text (e.g., \"The specific 3GPP signaling message name found in the header\").
 4. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
@@ -38,7 +38,7 @@ Return STRICTLY a JSON object with keys 'nodes' and 'relations':
   \"nodes\": [
     {{
       \"label\": \"UE\", 
-      \"base_type\": \"NetworkNode\",
+      \"node_type\": \"NetworkNode\",
       \"description\": \"User Equipment\", 
       \"properties\": {{
         \"id\": \"Unique identifier for the UE in the local cell scope\", 
@@ -78,10 +78,9 @@ DISCOVERED PROPERTIES (Ontology):
 {ontology}
 
 Instructions:
-1. Map specific entities (e.g., 'UE', 'AMF') to the most appropriate Generic Node Label (e.g., 'NetworkNode').
-2. CRITICAL: Use the 'subtype' or 'name' property to preserve the specific entity identity.
-3. Extract properties for Relationships as defined in the Ontology (e.g., populate 'message_name' for SENDS).
-4. Return strictly a JSON object with a key 'triples'.
+1. Map entities in the text to the specific 'label' and 'node_type' in the Ontology.
+2. Use the discovered 'properties' for both nodes and edges.
+3. If an interaction matches a relationship pattern (Source -> Type -> Target), extract it with all properties.
 
 Example Triple:
 {{
@@ -106,7 +105,7 @@ Consolidate the discovered domain entities and relationship patterns into a SING
 
 STRICT RULES:
 1. ONLY use the 3GPP domain (UE, gNB, AMF, UPF, etc.). 
-2. Every node MUST have a 'base_type' from: NetworkNode, ProtocolMessage, Timer, Procedure, UserState.
+2. Every node MUST have a 'node_type' from: NetworkNode, ProtocolMessage, Timer, Procedure, UserState.
 3. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
 4. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
 
