chore: rename ontology output to ontology_output.json and enforce uppercase relations

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -18,7 +18,7 @@ ONTOLOGY_CHUNK_SIZE=500
 ONTOLOGY_CHUNK_OVERLAP=100
 
 # Ontology Configuration
-ONTOLOGY_PATH=ontology.json
+ONTOLOGY_PATH=ontology_output.json
 
 # Discovery Prompt
 ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
