chore: ignore generated ontology outputs and strengthen fixed type constraints in prompts

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -24,14 +24,16 @@ ONTOLOGY_PATH=ontology_output.json
 ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
 Analyze the text to discover domain entities and their interaction patterns.
 
-FIXED CATEGORIES (Node Types):
+FIXED CATEGORIES (Node Types - DO NOT MODIFY OR ADD):
 - NetworkNode, ProtocolMessage, Timer, Procedure, UserState
 
 Instructions:
-1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to a 'node_type'.
-2. Define 'properties' for each label. DO NOT use simple types like 'string'. 
-3. INSTEAD, provide a clear, technical description of what the property represents and examples of its values from the text (e.g., \"The specific 3GPP signaling message name found in the header\").
-4. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
+1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to one of the FIXED 'node_type' categories above.
+2. DO NOT invent new node types. Use ONLY the 5 listed above.
+3. Define 'properties' for each label. DO NOT use simple types like 'string'. 
+4. INSTEAD, provide a clear, technical description of what the property represents and examples of its values from the text.
+5. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
+6. Relationships MUST use clear verbs in CAPITAL LETTERS.
 
 Return STRICTLY a JSON object with keys 'nodes' and 'relations':
 {{
@@ -68,10 +70,10 @@ JSON Output:"
 TRIPLE_EXTRACTION_PROMPT="You are a 3GPP Knowledge Graph expert. 
 Extract knowledge triples strictly following the provided LIMITATIONS and ONTOLOGY.
 
-NODE TYPES (Limitation):
+NODE TYPES (STRICT LIMITATION):
 {node_types}
 
-RELATIONSHIP TYPES (Limitation):
+RELATIONSHIP TYPES (STRICT LIMITATION):
 {relation_types}
 
 DISCOVERED PROPERTIES (Ontology):
@@ -79,8 +81,10 @@ DISCOVERED PROPERTIES (Ontology):
 
 Instructions:
 1. Map entities in the text to the specific 'label' and 'node_type' in the Ontology.
-2. Use the discovered 'properties' for both nodes and edges.
-3. If an interaction matches a relationship pattern (Source -> Type -> Target), extract it with all properties.
+2. The 'node_type' MUST be one of the FIXED LIMITATIONS provided.
+3. Use the discovered 'properties' for both nodes and edges.
+4. Only use Relationship Types listed in the STRICT LIMITATION.
+5. If an interaction matches a relationship pattern (Source -> Type -> Target), extract it with all properties.
 
 Example Triple:
 {{
@@ -105,9 +109,10 @@ Consolidate the discovered domain entities and relationship patterns into a SING
 
 STRICT RULES:
 1. ONLY use the 3GPP domain (UE, gNB, AMF, UPF, etc.). 
-2. Every node MUST have a 'node_type' from: NetworkNode, ProtocolMessage, Timer, Procedure, UserState.
+2. Every node MUST have a 'node_type' from the FIXED LIST: NetworkNode, ProtocolMessage, Timer, Procedure, UserState. DO NOT use any other types.
 3. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
 4. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
+5. Ensure all Relationship Types are in CAPITAL LETTERS.
 
 Return STRICTLY a JSON object with keys 'nodes' and 'relations'.
 
