chore: strictly enforce allowed relationship types and improve key handling

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -24,16 +24,18 @@ ONTOLOGY_PATH=ontology_output.json
 ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
 Analyze the text to discover domain entities and their interaction patterns.
 
-FIXED CATEGORIES (Node Types - DO NOT MODIFY OR ADD):
+FIXED NODE TYPES (DO NOT MODIFY OR ADD):
 - NetworkNode, ProtocolMessage, Timer, Procedure, UserState
+
+ALLOWED RELATIONSHIP TYPES:
+{relation_types}
 
 Instructions:
 1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to one of the FIXED 'node_type' categories above.
 2. DO NOT invent new node types. Use ONLY the 5 listed above.
-3. Define 'properties' for each label. DO NOT use simple types like 'string'. 
-4. INSTEAD, provide a clear, technical description of what the property represents and examples of its values from the text.
-5. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
-6. Relationships MUST use clear verbs in CAPITAL LETTERS.
+3. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
+4. You MUST ONLY use relationship types from the ALLOWED list above.
+5. Relationships MUST use CAPITAL LETTERS.
 
 Return STRICTLY a JSON object with keys 'nodes' and 'relations':
 {{
@@ -110,9 +112,10 @@ Consolidate the discovered domain entities and relationship patterns into a SING
 STRICT RULES:
 1. ONLY use the 3GPP domain (UE, gNB, AMF, UPF, etc.). 
 2. Every node MUST have a 'node_type' from the FIXED LIST: NetworkNode, ProtocolMessage, Timer, Procedure, UserState. DO NOT use any other types.
-3. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
-4. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
-5. Ensure all Relationship Types are in CAPITAL LETTERS.
+3. ALLOWED RELATIONSHIP TYPES: {relation_types}. You MUST ONLY use these types.
+4. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
+5. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
+6. Ensure all Relationship Types are in CAPITAL LETTERS and from the allowed list.
 
 Return STRICTLY a JSON object with keys 'nodes' and 'relations'.
 
