feat: enhance ontology metadata with descriptions and examples for better LLM guidance

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -4,7 +4,7 @@ NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
 
 # LLM Configuration
-LLM_API_BASE=http://192.168.1.2:8000/v1
+LLM_API_BASE=http://localhost:8000/v1
 LLM_API_KEY=EMPTY
 LLM_MODEL=models/gemma-2-2b-it
 LLM_TIMEOUT=300.0
@@ -24,18 +24,19 @@ ONTOLOGY_PATH=ontology_output.json
 ONTOLOGY_DISCOVERY_PROMPT="You are a 3GPP Ontology Architect.
 Analyze the text to discover domain entities and their interaction patterns.
 
-FIXED NODE TYPES (DO NOT MODIFY OR ADD):
-- NetworkNode, ProtocolMessage, Timer, Procedure, UserState
+FIXED NODE TYPES (Description & Examples):
+{node_types}
 
-ALLOWED RELATIONSHIP TYPES:
+ALLOWED RELATIONSHIP TYPES (Description & Examples):
 {relation_types}
 
 Instructions:
 1. Identify Domain Labels (e.g., 'UE', 'gNB') and map them to one of the FIXED 'node_type' categories above.
-2. DO NOT invent new node types. Use ONLY the 5 listed above.
-3. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') and define descriptive properties for them.
-4. You MUST ONLY use relationship types from the ALLOWED list above.
-5. Relationships MUST use CAPITAL LETTERS.
+2. DO NOT invent new node types. Use ONLY the categories listed above.
+3. Identify Relationship Patterns (e.g., 'UE' SENDS to 'gNB') using ONLY the ALLOWED relationship types.
+4. For both nodes and relationships, define 'properties' based on the text. 
+5. Provide technical descriptions for each discovered property.
+6. Relationship types MUST use CAPITAL LETTERS and must be exactly from the ALLOWED list.
 
 Return STRICTLY a JSON object with keys 'nodes' and 'relations':
 {{
@@ -110,10 +111,13 @@ ONTOLOGY_CONSOLIDATION_PROMPT="You are a 3GPP Ontology Architect.
 Consolidate the discovered domain entities and relationship patterns into a SINGLE UNIFIED SCHEMA with 'nodes' and 'relations' keys.
 
 STRICT RULES:
-1. ONLY use the 3GPP domain (UE, gNB, AMF, UPF, etc.). 
-2. Every node MUST have a 'node_type' from the FIXED LIST: NetworkNode, ProtocolMessage, Timer, Procedure, UserState. DO NOT use any other types.
-3. ALLOWED RELATIONSHIP TYPES: {relation_types}. You MUST ONLY use these types.
-4. DO NOT merge specific labels like 'UE' and 'gNB' into a single 'NetworkNode' entry. Keep them separate.
+1. ONLY use the 3GPP domain. 
+2. Every node MUST have a 'node_type' from the FIXED LIST:
+{node_types}
+3. ALLOWED RELATIONSHIP TYPES:
+{relation_types}
+You MUST ONLY use these types.
+4. DO NOT merge specific labels like 'UE' and 'gNB' into a single entry. Keep them separate.
 5. Consolidate properties: If 'UE' has 'id' in one schema and 'state' in another, the final 'UE' must have BOTH.
 6. Ensure all Relationship Types are in CAPITAL LETTERS and from the allowed list.
 
