fix: prevent ontology clearing and include relations in consolidation
- Fallback to original ontology if consolidation fails or returns empty
- Include relations in consolidation prompt and processing
- Update .env.example with new consolidation prompt format

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -124,5 +124,5 @@ You MUST ONLY use these types.
 Return STRICTLY a JSON object with keys 'nodes' and 'relations'.
 
 Input Schemas to Consolidate:
-{nodes}
+Nodes:\n{nodes}\n\nRelations:\n{relations}
 "
