fix: remove literal \n from prompt in .env.example

--- a/graph_3gpp/.env.example
+++ b/graph_3gpp/.env.example
@@ -124,5 +124,5 @@ You MUST ONLY use these types.
 Return STRICTLY a JSON object with keys 'nodes' and 'relations'.
 
 Input Schemas to Consolidate:
-Nodes:\n{nodes}\n\nRelations:\n{relations}
+Nodes: {nodes} Relations: {relations}
 "
